# agent-observability-runbooks

./: .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  package.json
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 111b3e8dd99a_add_policy_id_to_run_validations.py  2e749a281ce0_init.py  4faf3251f5cc_add_run_validation_input_hash.py  9e35486cd757_add_step_constraints_and_unique_index.py  a19960b6fae8_unique_run_validation_input_hash.py  bec1d037cc90_nullable_step_run_id.py  cedb180ba24d_add_run_validations.py  e57d3c71eb14_add_nonnegative_check_constraints.py  e9cd649a50d7_add_policies_table.py
backend/app/: crud.py  db.py  main.py  models.py  schemas.py  settings.py
backend/app/routers/: events.py  policies.py  projects.py  runs.py
sdk-js/: README.md  package-lock.json  package.json
sdk-js/src/: context.js  index.ts  middleware.js  obsClient.js
sdk-python/: README.md  pyproject.toml
sdk-python/examples/: local_demo.py  runbook_shortify_v1.yaml  shortify_integration_test.py
sdk-python/obs_sdk/: __init__.py  client.py  run.py  types.py
sdk-python/veriops_sdk/: utils.py
