[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "veriops-sdk"
version = "0.1.1"
description = "Python SDK for agent observability event ingestion and runbook validation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ashwin Kapile" }]
keywords = ["observability", "agents", "fastapi", "telemetry", "runbooks"]
dependencies = [
  "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://example.com"
Repository = "https://example.com"

[tool.hatch.build.targets.wheel]
only-include = ["veriops_sdk"]
sources = ["."]

[tool.hatch.build.targets.sdist]
include = [
  "veriops_sdk/**",
  "examples/**",
  "README.md",
  "pyproject.toml",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "mypy>=1.8.0",
]
